--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseURL = "http://firedfly.tkg/"
-languageCode = "ja-JP"
-title = "firedfly's learning diary"
+baseURL = "http://firedfly.tk/"
+languageCode = "ja"
+title = "firedfly's Learning Diary"
+contentDir = "post"
 theme  = "hugo-future-imperfect-slim"
 
 [markup.goldmark.renderer]
